cambio de codigos de error y documentación de roles
